--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^1.0.1",
     "husky": "^8.0.0",
+    "lint-staged": "^15.1.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
