--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,33 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
+  "env": {
+    "commonjs": true,
+    "es2021": true,
+    "node": true,
+    "jest": true
+  },
+  "extends": ["xo", "prettier"],
+  "overrides": [
+    {
+      "extends": ["xo-typescript", "prettier"],
+      "files": "*.ts",
+      "rules": {
+        "no-unused-vars": "error",
+        "@typescript-eslint/consistent-type-definitions": ["error", "interface"]
+      }
     }
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-implicit-coercion": "off",
+    "new-cap": [
+      "error",
+      {
+        "capIsNewExceptions": ["Router"]
+      }
+    ],
+    "no-console": "off"
+  }
 }
