--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "start:dev": "node --watch .",
     "build": "npx tsc",
     "build:dev": "npx tsc -w",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test:coverage": "jest--coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "<20.5.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^18.4.1",
     "@commitlint/config-conventional": "^18.4.0",
