--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "<20.5.1"
+    "node": ">=18.18.0 <20.5.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.1",
@@ -33,6 +33,7 @@
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
