--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,12 @@
         "no-unused-vars": "error",
         "@typescript-eslint/consistent-type-definitions": ["error", "interface"]
       }
+    },
+    {
+      "files": ["src/**/model/*.ts"],
+      "rules": {
+        "@typescript-eslint/naming-convention": "off"
+      }
     }
   ],
   "parserOptions": {
